# regulus

./: .gitattributes  .gitignore  Cargo.toml  README.md  a.re  docs.md  x.prog
.github/workflows/: rust.yml
frontend/: Cargo.toml
frontend/src/: main.rs
newlang/: Cargo.toml
newlang/src/: argument.rs  atom.rs  exception.rs  function.rs  lib.rs  macros.rs  (+2 more)
newlang_macros/: Cargo.toml
programs/: casttest.prog  casttest_streams.json  double_print_file.prog  evil.prog  fraction.prog  importtest.prog  smalltest.prog  test.prog  transitivity_test.prog
regulus/: Cargo.toml  build.rs
regulus/src/: argument.rs  atom.rs  exception.rs  function.rs  holevec.rs  lib.rs  list.rs  macros.rs  optimizations.rs  state.rs
regulus/src/builtins/: cast.rs  core.rs  fn_def.rs  help.rs  import.rs  io.rs  list.rs  logic.rs  math.rs  mod.rs  private.rs  string.rs  time.rs  ty.rs
regulus/src/parsing/: mod.rs  positions.rs  token.rs
regulus/src/state/: mod.rs  storage.rs
regulus/stdlib/: __builtin_list_fn.re  __builtin_prelude.re  aliases.re  assertions.re  casting.re  collect_list_into_string.re  control_flow.re  fraction.re  help.re  lists.re  math.re  operators.re  prelude.re  print.re  random.re  range.re  sorting.re  string.re  time.re  type_id.re
src/: argument.rs  atom.rs  class.rs  exception.rs  function.rs  lib.rs  macros.rs  main.rs  object.rs  parsing.rs  prelude.rs  progerror.rs  state.rs  stdio.rs  storage.rs  todo.txt  utils.rs
stdlib/: aliases.prog  lists.prog  range.prog
tests/: Cargo.toml  runner.rs  test_generator.rs
tests_generator_macro/: Cargo.toml
(+261 files in other folders)
