[package]
name = "newlang"
version = "0.1.0"
edition = "2021"

[dependencies]
colored = "3"
clap = { version = "4.5", features = ["derive"] }

[dev-dependencies]
tests_generator_macro = { path = "tests_generator_macro" }
serde_json = "1.0.132"
serde = { version = "1.0.215", features = ["derive"] }

[features]
display_impls = []
default = []
